system optimization by huusang