@@ -1,17 +1,25 @@
 package com.SelfCare.SelftCare.Service;
 
 import com.SelfCare.SelftCare.DTO.Request.CreateExerciseRequest;
+import com.SelfCare.SelftCare.DTO.Request.UpdateExerciseRequest;
 import com.SelfCare.SelftCare.DTO.Response.ExerciseResponse;
 import com.SelfCare.SelftCare.Entity.Exercise;
 import com.SelfCare.SelftCare.Entity.ExerciseCategory;
+import com.SelfCare.SelftCare.Entity.User;
+import com.SelfCare.SelftCare.Entity.UserProfile;
+import com.SelfCare.SelftCare.Enum.Goal;
 import com.SelfCare.SelftCare.Exception.AppException;
 import com.SelfCare.SelftCare.Exception.ErrorCode;
 import com.SelfCare.SelftCare.Mapper.ExerciseMapper;
 import com.SelfCare.SelftCare.Repository.ExerciseCategoryRepository;
 import com.SelfCare.SelftCare.Repository.ExerciseRepository;
+import com.SelfCare.SelftCare.Repository.UserRepository;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.Caching;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
@@ -27,6 +35,7 @@ public class ExerciseService {
     ExerciseCategoryRepository categoryRepository;
     FileUploadsService fileUploadsService;
     ExerciseMapper exerciseMapper;
+    UserRepository userRepository;
 
     public ExerciseResponse createExercise(CreateExerciseRequest request) throws IOException {
 
@@ -49,7 +58,7 @@ public class ExerciseService {
             videoUrl = fileUploadsService.uploadVideo(request.getVideo());
         }
 
-        // 4. Map tạo entity
+
         Exercise exercise = Exercise.builder()
                 .exerciseName(request.getExerciseName())
                 .caloriesPerMinute(request.getCaloriesPerMinute())
@@ -61,6 +70,7 @@ public class ExerciseService {
                 .imageUrl(imageUrl)
                 .videoUrl(videoUrl)
                 .exerciseCategory(category)
+                .goal(request.getGoal())
                 .build();
 
         Exercise saved = exerciseRepository.save(exercise);
@@ -69,17 +79,109 @@ public class ExerciseService {
         return exerciseMapper.toResponse(saved);
     }
 
-    public List<ExerciseResponse> getAllExercises() {
-        return exerciseRepository.findAll()
+    @Cacheable(
+            value = "exercisesByGoal",
+            key = "#email"
+    )
+    public List<ExerciseResponse> getAllExercisesByUserGoal(String email) {
+
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
+
+        UserProfile profile = user.getUserProfile();
+        if (profile == null || profile.getHealthGoal() == null) {
+            throw new AppException(ErrorCode.USER_PROFILE_NULL);
+        }
+
+        Goal goal = profile.getHealthGoal();
+
+        return exerciseRepository.findByGoal(goal)
                 .stream()
                 .map(exerciseMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<ExerciseResponse> getExercisesByCategory(Long categoryId) {
-        return exerciseRepository.findByExerciseCategory_CategoryId(categoryId)
+    @Cacheable(
+            value = "exercisesByGoalAndCategory",
+            key = "#email + '_' + #categoryId"
+    )
+    public List<ExerciseResponse> getExercisesByCategory(
+            String email,
+            Long categoryId
+    ) {
+
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
+
+        UserProfile profile = user.getUserProfile();
+        if (profile == null || profile.getHealthGoal() == null) {
+            throw new AppException(ErrorCode.USER_PROFILE_NULL);
+        }
+
+        Goal goal = profile.getHealthGoal();
+        return exerciseRepository
+                .findByGoalAndExerciseCategory_CategoryId(goal, categoryId)
                 .stream()
                 .map(exerciseMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+
+    @Caching(evict = {
+            @CacheEvict(value = "exercisesByGoal", allEntries = true),
+            @CacheEvict(value = "exercisesByGoalAndCategory", allEntries = true)
+    })
+    public ExerciseResponse updateExercise(Long exerciseId, UpdateExerciseRequest request) throws IOException {
+
+        Exercise exercise = exerciseRepository.findById(exerciseId)
+                .orElseThrow(() -> new AppException(ErrorCode.EXERCISE_NOT_FOUND));
+
+        // category (DTO validate categoryId)
+        ExerciseCategory category = categoryRepository.findById(request.getCategoryId())
+                .orElseThrow(() -> new AppException(ErrorCode.EXERCISE_CATEGORY_NOT_FOUND));
+        exercise.setExerciseCategory(category);
+
+        // image optional: nếu gửi mới thì update, không gửi thì giữ ảnh cũ
+        if (request.getImage() != null && !request.getImage().isEmpty()) {
+            String imageUrl = fileUploadsService.uploadImage(request.getImage());
+            exercise.setImageUrl(imageUrl);
+        }
+
+        // video optional
+        if (request.getVideo() != null && !request.getVideo().isEmpty()) {
+            String videoUrl = fileUploadsService.uploadVideo(request.getVideo());
+            exercise.setVideoUrl(videoUrl);
+        }
+
+        // map thẳng (DTO đã validate)
+        exercise.setExerciseName(request.getExerciseName());
+        exercise.setCaloriesPerMinute(request.getCaloriesPerMinute());
+        exercise.setDescription(request.getDescription());
+        exercise.setInstructions(request.getInstructions());
+        exercise.setDifficultyLevel(request.getDifficultyLevel());
+        exercise.setEquipmentNeeded(request.getEquipmentNeeded());
+        exercise.setMuscleGroups(request.getMuscleGroups());
+        exercise.setGoal(request.getGoal());
+
+        Exercise saved = exerciseRepository.save(exercise);
+        return exerciseMapper.toResponse(saved);
+    }
+
+
+    @Caching(evict = {
+            @CacheEvict(value = "exercisesByGoal", allEntries = true),
+            @CacheEvict(value = "exercisesByGoalAndCategory", allEntries = true)
+    })
+    public void deleteExercise(Long exerciseId) {
+
+        Exercise exercise = exerciseRepository.findById(exerciseId)
+                .orElseThrow(() -> new AppException(ErrorCode.EXERCISE_NOT_FOUND));
+
+        exerciseRepository.delete(exercise);
+    }
+
+
+
+
+
 }
